added auth using tokens

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+api_refresh_token:
+    path: /token/refresh
+api_login_check:
+    path: /api/login_check
