--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.1",
         "gesdinet/jwt-refresh-token-bundle": "*",
         "lexik/jwt-authentication-bundle": "^2.21",
+        "nelmio/cors-bundle": "^2.4",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
@@ -20,6 +21,7 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
+        "symfony/translation": "7.0.*",
         "symfony/yaml": "7.0.*"
     },
     "config": {
