--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
                 username_path: email
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                failure_handler: App\Security\LoginFailureHandler
         api:
             pattern: ^/api
             stateless: true
@@ -26,6 +26,8 @@ security:
             refresh_jwt:
                 check_path: /api/token/refresh
                 provider: app_user_provider
+            logout:
+                path: api_token_invalidate
     access_control:
         - { path: ^/api/(login|token/refresh), roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: ROLE_USER }
