added exception for email already exist

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,6 @@ services:
     App\EventSubscriber\LocaleSubscriber:
         tags:
             - { name: kernel.event_subscriber }
+    App\EventSubscriber\ExceptionSubscriber:
+        tags:
+            - { name: kernel.event_subscriber }
