--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,5 @@ services:
     App\EventSubscriber\ExceptionSubscriber:
         tags:
             - { name: kernel.event_subscriber }
+    App\Security\LoginSuccessHandler:
+        arguments: [ '@lexik_jwt_authentication.handler.authentication_success' ]
