--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,13 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+
   database:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
     environment:
@@ -20,7 +26,6 @@ services:
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
 
-###> symfony/mercure-bundle ###
   mercure:
     image: dunglas/mercure
     restart: unless-stopped
@@ -42,14 +47,9 @@ services:
     volumes:
       - mercure_data:/data
       - mercure_config:/config
-###< symfony/mercure-bundle ###
 
 volumes:
-###> doctrine/doctrine-bundle ###
   database_data:
-###< doctrine/doctrine-bundle ###
 
-###> symfony/mercure-bundle ###
   mercure_data:
   mercure_config:
-###< symfony/mercure-bundle ###
