--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "friendsofsymfony/elastica-bundle": "^6.4",
         "gesdinet/jwt-refresh-token-bundle": "*",
         "knplabs/knp-paginator-bundle": "^6.3",
         "lexik/jwt-authentication-bundle": "^2.21",
