--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=3ee135dc14df64568486dabef56c4ee5
 ###< symfony/framework-bundle ###
 
@@ -51,6 +51,3 @@ MERCURE_PUBLIC_URL=http://localhost:4000/.well-known/mercure
 MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
 ###< symfony/mercure-bundle ###
 
-###> friendsofsymfony/elastica-bundle ###
-ELASTICSEARCH_URL=http://localhost:9200/
-###< friendsofsymfony/elastica-bundle ###
