added bonsai url

--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ APP_SECRET=3ee135dc14df64568486dabef56c4ee5
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
-
+BONSAI_URL='https://t6dufj6bh3:t4b28ryclf@ivy-849219168.us-east-1.bonsaisearch.net:443'
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
