--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=3ee135dc14df64568486dabef56c4ee5
 ###< symfony/framework-bundle ###
 
@@ -32,15 +32,14 @@ APP_SECRET=3ee135dc14df64568486dabef56c4ee5
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
- #DATABASE_URL="postgresql://course_project_database_gwuh_user:ZNmH1ggtY5UDGsZhnrb2RkkM7G8IyCIM@dpg-cpc1aojtg9os73csg6rg-a.oregon-postgres.render.com:5432/course_project_database_gwuh"
+ DATABASE_URL="postgresql://course_project_database_gwuh_user:ZNmH1ggtY5UDGsZhnrb2RkkM7G8IyCIM@dpg-cpc1aojtg9os73csg6rg-a.oregon-postgres.render.com:5432/course_project_database_gwuh"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
- DATABASE_URL="postgresql://postgres:aidalox2011@localhost:5432/test"
+# DATABASE_URL="postgresql://postgres:aidalox2011@localhost:5432/test"
  ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
-BONSAI_URL=https://t6dufj6bh3:t4b28ryclf@ivy-849219168.us-east-1.bonsaisearch.net:443
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
