bug fixin regactoring

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,7 @@ security:
                 path: api_token_invalidate
     access_control:
         - { path: ^/api/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/item/get/item, roles: PUBLIC_ACCESS }
         - { path: ^/api/(login|token/refresh), roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: ROLE_USER }
         - { path: ^/open-api, roles: PUBLIC_ACCESS }
