--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/http-client": "7.0.*",
         "symfony/mercure-bundle": "^0.3.8",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
